# myLibraryCplusplus

./: ArquivoEntradaDados  CMakeLists.txt  Math.cpp  Math.h  README.md  Teste.cpp  Teste.h  Validation.cpp  Validation.h  main.cpp
